--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="ru">
 <head>
   <title>Места для души</title>
-  <link rel="stylesheet" href="./normalize.css">
   <link rel="stylesheet" href="./pages/index.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,53 +22,53 @@
         <div class="profile__info">
           <div class="profile__title">
             <h1 class="profile__title-text">Жак-Ив Кусто</h1>
-            <button class="profile__edit-button"></button>
+            <button class="profile__edit-button" aria-label="Edit" type="button"></button>
           </div>
           <p class="profile__subtitle">Исследователь океана</p>
         </div>
-        <button class="profile__add-button"></button>
+        <button class="profile__add-button" aria-label="Add" type="submit"></button>
       </section>
       <section class="elements">
         <article class="element">
           <img src="./images/saint-peterburg.jpg" alt="Санкт-Петербург" class="element__image">
           <div class="element__container">
             <h2 class="element__name">Петербург</h2>
-            <button class="element__like-button"></button>
+            <button class="element__like-button" aria-label="Like" type="button"></button>
           </div>
         </article>
         <article class="element">
           <img src="./images/beach-china.jpg" alt="Пляж Китая" class="element__image">
           <div class="element__container">
             <h2 class="element__name">Пляж Китая</h2>
-            <button class="element__like-button"></button>
+            <button class="element__like-button" aria-label="Like" type="button" ></button>
           </div>
         </article>
         <article class="element">
           <img src="./images/china-2.jpg" alt="Вид из окна" class="element__image">
           <div class="element__container">
             <h2 class="element__name">Вид из окна</h2>
-            <button class="element__like-button"></button>
+            <button class="element__like-button" aria-label="Like" type="button"></button>
           </div>
         </article>
         <article class="element">
           <img src="./images/china-night.jpg" alt="Ночной китай" class="element__image">
           <div class="element__container">
             <h2 class="element__name">Ночной китай</h2>
-            <button class="element__like-button"></button>
+            <button class="element__like-button" aria-label="Like" type="button"></button>
           </div>
         </article>
         <article class="element">
           <img src="./images/sosnoviy-bor-2.jpg" alt="Ночь в Сосновом Бору" class="element__image">
           <div class="element__container">
             <h2 class="element__name">Ночь в Сосновом Бору</h2>
-            <button class="element__like-button"></button>
+            <button class="element__like-button" aria-label="Like" type="button"></button>
           </div>
         </article>
         <article class="element">
           <img src="./images/sosnoviy-bor.jpg" alt="Берег залива в Сосновом Бору" class="element__image">
           <div class="element__container">
             <h2 class="element__name">Берег залива в Сосновом Бору</h2>
-            <button class="element__like-button"></button>
+            <button class="element__like-button" aria-label="Like" type="button"></button>
           </div>
         </article>
       </section>
@@ -79,16 +78,14 @@
     </main>
     <div class="popup">
       <div class="popup__container">
-        <button class="popup__close-button"></button>
-        <form action="" class="popup__form">
+        <button class="popup__close-button" type="button" aria-label="Close"></button>
+        <form action="#" class="popup__form" method="POST" name="form">
           <h2 class="popup__title">Редактировать профиль</h2>
           <fieldset class="popup__fieldset">
             <input type="text" class="popup__form-item"  name="name" placeholder="Жак-Ив Кусто">
-          </fieldset>
-          <fieldset class="popup__fieldset">
             <input type="text" class="popup__form-item" name="about" placeholder="Исследователь океана">
           </fieldset>
-          <button class="popup__save-button">Сохранить</button>
+          <button class="popup__save-button" type="submit">Сохранить</button>
         </form>
       </div>
     </div>
