--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </div>
           <p class="profile__subtitle">Исследователь океана</p>
         </div>
-        <button class="profile__add-button" aria-label="Добавить данные" type="submit"></button>
+        <button class="profile__add-button" aria-label="Добавить данные" type="button"></button>
       </section>
       <section class="elements">
         <article class="element">
@@ -85,7 +85,7 @@
             <input type="text" class="popup__form-item"  name="name" placeholder="Жак-Ив Кусто">
             <input type="text" class="popup__form-item" name="about" placeholder="Исследователь океана">
           </fieldset>
-          <button class="popup__save-button" type="button" aria-label="Сохранить">Сохранить</button>
+          <button class="popup__save-button" type="submit" aria-label="Сохранить">Сохранить</button>
         </form>
       </div>
     </div>
